Fixed layout bug in Chrome.

--- a/themes/default.css
+++ b/themes/default.css
@@ -1,10 +1,13 @@
 /* General styles begin */
 html, body {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 body {
@@ -70,7 +73,7 @@ article {
 section.active { opacity: 1; }
 section {
     position: absolute;
-    width: 100% ;
+    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
